removing instagram images [15, 18, 20, 58, 68, 69, 73, 74, 75, 7, 128]

--- a/index.html
+++ b/index.html
@@ -316,19 +316,6 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000015.jpg" title="Stunner of a ride this morning. Fall colors and a blue sky sunrise. Thanks to @agonz21 for the snap 📸 #LovestarRaceClub #cycling #bicycle #bikechi #coffeeride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Stunner of a ride this morning. Fall colors and a blue sky sunrise. Thanks to @agonz21 for the snap 📸 #LovestarRaceClub #cycling #bicycle #bikechi #coffeeride</small>
-                           </div>
-                           <img src="../lsphotos/image000015.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000016.jpg" title="'Twas a beautiful fall morning ride today. #leafpeeping #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>agonz21</h4>
@@ -368,21 +355,6 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000018.jpg" title="#TrueBlueMechanic #UltimateBlueToolWall #startthemyoung #parentingwin  Photo via @elliotlovestarbicycles ・・・
-Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>parktoolblue</h4>
-                              <small>#TrueBlueMechanic #UltimateBlueToolWall #startthemyoung #parentingwin  Photo via @elliotlovestarbicycles ・・・
-Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000018.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000088.jpg" title="Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -409,12 +381,12 @@ Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClu
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000020.jpg" title="Great race day for the Lovestar Factory Team!!! To the podium for Rob - top spot in men's 4/5 race, and #BabyARC - top spot in the kids under 2 yo race! 😊 #cyclocross #cycling #cyclocrosschicago #striderbikes #LovestarRaceClub #bicycle  #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                      <a tabindex="1" href="../lsphotos/image000541.jpg" title="Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
-                              <small>Great race day for the Lovestar Factory Team!!! To the podium for Rob - top spot in men's 4/5 race, and #BabyARC - top spot in the kids under 2 yo race! 😊 #cyclocross #cycling #cyclocrosschicago #striderbikes #LovestarRaceClub #bicycle  #lovestarbicyclebags</small>
+                              <small>Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun</small>
                            </div>
-                           <img src="../lsphotos/image000020.jpg" class="img-responsive lazy" alt="">
+                           <img src="../lsphotos/image000541.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
@@ -422,12 +394,38 @@ Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClu
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000541.jpg" title="Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun" rel="lightbox" class="fancybox">
+                      <a tabindex="1" href="../lsphotos/image000089.jpg" title="Great race today Lovestar Factory Team!!! #cyclocrosschicago #cycling #lovestarfactoryteam #cyclocross #lovestarbicyclebags #lovestar" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
-                              <small>Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun</small>
+                              <small>Great race today Lovestar Factory Team!!! #cyclocrosschicago #cycling #lovestarfactoryteam #cyclocross #lovestarbicyclebags #lovestar</small>
                            </div>
-                           <img src="../lsphotos/image000541.jpg" class="img-responsive lazy" alt="">
+                           <img src="../lsphotos/image000089.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000090.jpg" title="First race. Done. So happy. So proud. #firstrace #cyclocrosschicago #bike #lovestarfactoryteam #youngest #elliotlovestarbicycles #racingteam #lovestarbicyclebags #prouddaddy #thislittleguylovestoride" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>First race. Done. So happy. So proud. #firstrace #cyclocrosschicago #bike #lovestarfactoryteam #youngest #elliotlovestarbicycles #racingteam #lovestarbicyclebags #prouddaddy #thislittleguylovestoride</small>
+                           </div>
+                           <img src="../lsphotos/image000090.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000091.jpg" title="First race. Puddles were the highlight! #firstrace #cyclocrosschicago #lovestarfactoryteam #youngestrider #cycling #bike #elliotlovestarbicycle #lovestarbicyclebags #dadisproud" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>First race. Puddles were the highlight! #firstrace #cyclocrosschicago #lovestarfactoryteam #youngestrider #cycling #bike #elliotlovestarbicycle #lovestarbicyclebags #dadisproud</small>
+                           </div>
+                           <img src="../lsphotos/image000091.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
