--- a/instagram3.html
+++ b/instagram3.html
@@ -6,45 +6,6 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000051.jpg" title="Good morning to you, too, #shelfcloud #sudzon #lovestarraceclub #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Good morning to you, too, #shelfcloud #sudzon #lovestarraceclub #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000051.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000052.jpg" title="Storm vibes at the end of this morning's ride. #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Storm vibes at the end of this morning's ride. #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000052.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000053.jpg" title="New bike day!!! Glorious sunrise ride this morning. Thanks to @ponylou and the rest of my Pony Shop peeps for putting up with my decision making process 🚲🙌 #newbikeday #cycling #superX #ridecannondale #lovestarraceclub #baaw #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New bike day!!! Glorious sunrise ride this morning. Thanks to @ponylou and the rest of my Pony Shop peeps for putting up with my decision making process 🚲🙌 #newbikeday #cycling #superX #ridecannondale #lovestarraceclub #baaw #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000053.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000054.jpg" title="First time at @backlotcoffee first nitro! #yum #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>oliviabeaty</h4>
@@ -162,19 +123,6 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000058.jpg" title="Stunning sunrise ride with the #lovestarraceclub this morning. Great snap by @theandyhudson #cycling #bicycle #bike #bikechi #clubride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Stunning sunrise ride with the #lovestarraceclub this morning. Great snap by @theandyhudson #cycling #bicycle #bike #bikechi #clubride</small>
-                           </div>
-                           <img src="../lsphotos/image000058.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000059.jpg" title="The man who started it all, and to whom I owe a great deal. The man, the myth, the legend, @elliotlovestarbicycles #lovestarraceclub #laborday #cycling" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>theandyhudson</h4>
@@ -259,6 +207,58 @@
                               <small>Somebody is loving his new bike! #jnbs #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000065.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000066.jpg" title="Great recovery ride with the Harriff Boyz. Even got to ride through The Funnel. #lovestarraceclub #funnel" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Great recovery ride with the Harriff Boyz. Even got to ride through The Funnel. #lovestarraceclub #funnel</small>
+                           </div>
+                           <img src="../lsphotos/image000066.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000067.jpg" title="Beautiful morning with the #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Beautiful morning with the #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000067.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000102.jpg" title="Celebratory Alfredo Mac & bombers in the shadow of the mountain. #mthood #bikepacking #lovestarbicyclebags #bikecamping" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Celebratory Alfredo Mac & bombers in the shadow of the mountain. #mthood #bikepacking #lovestarbicyclebags #bikecamping</small>
+                           </div>
+                           <img src="../lsphotos/image000102.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000103.jpg" title="Lolo Pass Hut. #mthood #bikepacking #bikecamping #lovestarbicyclebags #fatbike #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lolo Pass Hut. #mthood #bikepacking #bikecamping #lovestarbicyclebags #fatbike #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000103.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
