--- a/instagram5.html
+++ b/instagram5.html
@@ -6,136 +6,6 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000110.jpg" title="Handlebar Roll completes the kit. #bikepacking #fatbike #bicycle #cycling #adventurebike #bicyclebag #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Handlebar Roll completes the kit. #bikepacking #fatbike #bicycle #cycling #adventurebike #bicyclebag #lovestarbicyclebags #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000110.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000111.jpg" title="Finished up a handlebar grab bag. The whole #bikepacking kit is starting to come together. #lovestarbicyclebags #handmade #bikechi #adventurebike #fatbike #bicyclebag #bicycle #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a handlebar grab bag. The whole #bikepacking kit is starting to come together. #lovestarbicyclebags #handmade #bikechi #adventurebike #fatbike #bicyclebag #bicycle #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000111.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000112.jpg" title="Had to take some pictures of my gear with some better light. #Bikepacking #bicycle #fatbike #adventurebike #bikechi #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Had to take some pictures of my gear with some better light. #Bikepacking #bicycle #fatbike #adventurebike #bikechi #handmade #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000112.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000113.jpg" title="Added a couple of top tube bags to my personal setup in preparation for Mt. Hood. #Handmade #lovestarbicyclebags #Bikepacking #bicycle #fatbike #adventurebike #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Added a couple of top tube bags to my personal setup in preparation for Mt. Hood. #Handmade #lovestarbicyclebags #Bikepacking #bicycle #fatbike #adventurebike #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000113.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000084.jpg" title="T-minus 5 days until Mt. Hood #Bikepacking Adventure...final gear layout has begun. #bicycle #fatbike #lovestarbicyclebags #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>T-minus 5 days until Mt. Hood #Bikepacking Adventure...final gear layout has begun. #bicycle #fatbike #lovestarbicyclebags #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image000084.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000077.jpg" title="Sunrise Coffee Ride #bicycle #cycling #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise Coffee Ride #bicycle #cycling #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000077.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000543.jpg" title="#ssct #lovestarfactoryteam #lsb" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>#ssct #lovestarfactoryteam #lsb</small>
-                           </div>
-                           <img src="../lsphotos/image000543.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000544.jpg" title="This morning's ride was a blast. #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>This morning's ride was a blast. #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000544.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000078.jpg" title="#crossiscoming kind of morning. #cycling #cx #cyclocross #LovestarRaceClub #bicycle #moots" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#crossiscoming kind of morning. #cycling #cx #cyclocross #LovestarRaceClub #bicycle #moots</small>
-                           </div>
-                           <img src="../lsphotos/image000078.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000114.jpg" title="Tubulars have started to make their annual appearances.... #crossiscoming #cx #cyclocross #moots #psychlox #bicycle #cycling #bikechi #baaw #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Tubulars have started to make their annual appearances.... #crossiscoming #cx #cyclocross #moots #psychlox #bicycle #cycling #bikechi #baaw #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000114.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000545.jpg" title="Trying some new things/upgrades on the supersix. #lovestarfactoryteam #stagespower #vittoriatires #supersixevo" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -259,6 +129,136 @@
                               <small>Fellowship of the Big Ring. #bicycle #cycling #coffeeride #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000550.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000533.jpg" title="Saturday afternoons are good for bike washing. #lovestarfactoryteam #ridecannondale #supersixevo #cleanbike #baaw" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Saturday afternoons are good for bike washing. #lovestarfactoryteam #ridecannondale #supersixevo #cleanbike #baaw</small>
+                           </div>
+                           <img src="../lsphotos/image000533.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000551.jpg" title="It was a close race...but @agonz21 with his blue bike edged me out in the match-your-accessories-to-your-kit game today. #cycling #bicycle #lovestarfactoryteam #bikesonfleek" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>It was a close race...but @agonz21 with his blue bike edged me out in the match-your-accessories-to-your-kit game today. #cycling #bicycle #lovestarfactoryteam #bikesonfleek</small>
+                           </div>
+                           <img src="../lsphotos/image000551.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000552.jpg" title="Couldn't find my sunglasses his morning...had to go full spaceman. #aeroiseverything #lovestarfactoryteam #cycling #bicycle #bikechi #BikeToTheFuture" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Couldn't find my sunglasses his morning...had to go full spaceman. #aeroiseverything #lovestarfactoryteam #cycling #bicycle #bikechi #BikeToTheFuture</small>
+                           </div>
+                           <img src="../lsphotos/image000552.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000538.jpg" title="From today's ride. #mocabang #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>From today's ride. #mocabang #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000538.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000080.jpg" title="Smiles for miles on this morning's sunrise team ride. #LovestarRaceClub #bicycle #bikechi #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Smiles for miles on this morning's sunrise team ride. #LovestarRaceClub #bicycle #bikechi #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000080.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000118.jpg" title="Same stealthy bag has a blaze orange Cordura interior. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #cordura #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Same stealthy bag has a blaze orange Cordura interior. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #cordura #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000118.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000119.jpg" title="Finished up a stealthy #lovestarbicyclebags SaddlePack this morning. #handmade #bicycle #cycling #bicyclebag #cordura #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a stealthy #lovestarbicyclebags SaddlePack this morning. #handmade #bicycle #cycling #bicyclebag #cordura #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000119.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000553.jpg" title="#lovestarfactoryteam #mocabang" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#lovestarfactoryteam #mocabang</small>
+                           </div>
+                           <img src="../lsphotos/image000553.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000083.jpg" title="New mini-bike storage systems at #lovestarbicyclebags H.Q." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New mini-bike storage systems at #lovestarbicyclebags H.Q.</small>
+                           </div>
+                           <img src="../lsphotos/image000083.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000554.jpg" title="#cycling #bicycle #moots #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#cycling #bicycle #moots #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000554.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
