--- a/instagram7.html
+++ b/instagram7.html
@@ -6,136 +6,6 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000539.jpg" title="Birthday ride treats! European desserts at #gerhardsbakery thanks @pattylouwho55 for the inspiration! #lovestarfactoryteam #champsys #lavazza" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Birthday ride treats! European desserts at #gerhardsbakery thanks @pattylouwho55 for the inspiration! #lovestarfactoryteam #champsys #lavazza</small>
-                           </div>
-                           <img src="../lsphotos/image000539.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000562.jpg" title="Wisconsin riding...#lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Wisconsin riding...#lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000562.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000563.jpg" title="Summer Love. #lovestarfactoryteam #theponyshop #moots #psychloX #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Summer Love. #lovestarfactoryteam #theponyshop #moots #psychloX #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000563.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000564.jpg" title="Nice kits...#lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Nice kits...#lovestarfactoryteam #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000564.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000565.jpg" title="#lovestarfactoryteam had their sock game on fleek this morning. #sockdoping #bicycle #cycling #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam had their sock game on fleek this morning. #sockdoping #bicycle #cycling #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000565.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000566.jpg" title="Woohoo! 206.4 miles, 9000+ calories, and 17.5 hours later I finished the Dirty Kanza 200! Special thanks and so much love to my wife, Roberta for supporting all my crazy training!! Big shout out to @casadewaggoner and @elliotlovestarbicycles for doing this with me, sorry your days didn't end the way you hoped! :-( Big thank you to Matt for being our support crew. And special thanks to @ponylou and the crew at #ponyshop for making sure my bike was in tip top shape. And finally, special thanks to David Englund for teaching how to keep going when it feels like I've got nothing left. #lovestarfactoryteam #crushgravel #dk200 #superx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Woohoo! 206.4 miles, 9000+ calories, and 17.5 hours later I finished the Dirty Kanza 200! Special thanks and so much love to my wife, Roberta for supporting all my crazy training!! Big shout out to @casadewaggoner and @elliotlovestarbicycles for doing this with me, sorry your days didn't end the way you hoped! :-( Big thank you to Matt for being our support crew. And special thanks to @ponylou and the crew at #ponyshop for making sure my bike was in tip top shape. And finally, special thanks to David Englund for teaching how to keep going when it feels like I've got nothing left. #lovestarfactoryteam #crushgravel #dk200 #superx</small>
-                           </div>
-                           <img src="../lsphotos/image000566.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000567.jpg" title="Finish fuel. 161 in the books and just 46 left to go #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Finish fuel. 161 in the books and just 46 left to go #lovestarfactoryteam #crushgravel #dk200</small>
-                           </div>
-                           <img src="../lsphotos/image000567.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000568.jpg" title="Taking a rest at the 1/2 way point. 102 down, 104 to go! #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Taking a rest at the 1/2 way point. 102 down, 104 to go! #lovestarfactoryteam #crushgravel #dk200</small>
-                           </div>
-                           <img src="../lsphotos/image000568.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000569.jpg" title="1/2 way through leg one and feeling great. We got our first flat unfortunately so an unplanned pit stop makes for a photo op. #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>1/2 way through leg one and feeling great. We got our first flat unfortunately so an unplanned pit stop makes for a photo op. #lovestarfactoryteam #crushgravel #dk200</small>
-                           </div>
-                           <img src="../lsphotos/image000569.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000540.jpg" title="#dirtykanza200 start line! #cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#dirtykanza200 start line! #cycling #bicycle #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000540.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000570.jpg" title="Out for a spin this morning, and look who catches up with me while crushing some morning miles... #cycling #bicycle #lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -259,6 +129,136 @@
                               <small>And so his love of cycling began... #happybirthday #futurecyclist #cycling #cyclocrosschicago #cyclocross #elliotlovestarbicycle #lovestarfactoryteam #lovestar #lovestarbicyclebags #soitbegins #happybirthdaytoyou #loveyoubeyondmeasure</small>
                            </div>
                            <img src="../lsphotos/image000125.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000126.jpg" title="Sweet Friday morning double loop half century with Team Lovestar #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Sweet Friday morning double loop half century with Team Lovestar #lovestarbicyclebags #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000126.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000576.jpg" title="So proud watching this sweet THREE YEAR OLD ride her bike!?!?!! #bike #cycling #adorablegrandaughter #lovestarfactoryteam #lovestoride #futurecyclocrosschamp #amazing #proudgrandma #happyday" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>So proud watching this sweet THREE YEAR OLD ride her bike!?!?!! #bike #cycling #adorablegrandaughter #lovestarfactoryteam #lovestoride #futurecyclocrosschamp #amazing #proudgrandma #happyday</small>
+                           </div>
+                           <img src="../lsphotos/image000576.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000127.jpg" title="Cold May Morning. #cycling #bicycle #moots #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold May Morning. #cycling #bicycle #moots #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000127.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000129.jpg" title="Looks like summer...temps haven't quite caught on to the idea yet. #cycling #bicycle #moots #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Looks like summer...temps haven't quite caught on to the idea yet. #cycling #bicycle #moots #lovestarbicyclebags #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000129.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000130.jpg" title="Pre-ride #almanzo100 dinner at Whistle Binkies with the team #5smilesoutta6 #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Pre-ride #almanzo100 dinner at Whistle Binkies with the team #5smilesoutta6 #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000130.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000131.jpg" title="Fun times somewhere near mile 50 at #almanzo100 with Team Lovestar #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Fun times somewhere near mile 50 at #almanzo100 with Team Lovestar #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000131.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000535.jpg" title="Crushing gravel. #Almanzo100 #lovestarfactoryteam #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Crushing gravel. #Almanzo100 #lovestarfactoryteam #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000535.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000577.jpg" title="Awesome day for Team Lovestar today at the #almanzo100. We all started together and all finished together. So proud of the crew!! #lovestarfactoryteam #superx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Awesome day for Team Lovestar today at the #almanzo100. We all started together and all finished together. So proud of the crew!! #lovestarfactoryteam #superx</small>
+                           </div>
+                           <img src="../lsphotos/image000577.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000578.jpg" title="Had a great day crushing 100 miles of gravel at #Almanzo100 with the #LovestarFactoryTeam PC: @agonz21" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Had a great day crushing 100 miles of gravel at #Almanzo100 with the #LovestarFactoryTeam PC: @agonz21</small>
+                           </div>
+                           <img src="../lsphotos/image000578.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000579.jpg" title="Lots of ups today. #Almanzo100 #gravelgrinder #cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lots of ups today. #Almanzo100 #gravelgrinder #cycling #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000579.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
