--- a/instagram2.html
+++ b/instagram2.html
@@ -6,45 +6,6 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000035.jpg" title="Gritty & grey this morning for today's ride. Definitely feeling like cyclocross weather. #cycling #bicycle #cyclocross #cx #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gritty & grey this morning for today's ride. Definitely feeling like cyclocross weather. #cycling #bicycle #cyclocross #cx #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000035.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000036.jpg" title="Fast ride North this morning to meet up with  my Dad for a scenic ride home. #bicycle #cycling #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fast ride North this morning to meet up with  my Dad for a scenic ride home. #bicycle #cycling #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000036.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000094.jpg" title="Racing stripes on a custom #LovestarBicycleBags SaddlePack. #handmade #bicyclebag #cycling #bicycle #bikechi #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Racing stripes on a custom #LovestarBicycleBags SaddlePack. #handmade #bicyclebag #cycling #bicycle #bikechi #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000094.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000037.jpg" title="Sunrise miles & smiles. #LovestarRaceClub #cycling #bicycle #bikechi #coffeeride" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -259,6 +220,45 @@
                               <small>Thanks to @theandyhudson @ddave12000 & Ben M. For keeping me motivated when getting up to ride in the dark gets hard. And here's a picture of my bike...because it's new and I'm obsessed with it. #cycling #bicycle #ridecannondale #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000050.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000051.jpg" title="Good morning to you, too, #shelfcloud #sudzon #lovestarraceclub #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Good morning to you, too, #shelfcloud #sudzon #lovestarraceclub #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000051.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000052.jpg" title="Storm vibes at the end of this morning's ride. #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Storm vibes at the end of this morning's ride. #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000052.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000053.jpg" title="New bike day!!! Glorious sunrise ride this morning. Thanks to @ponylou and the rest of my Pony Shop peeps for putting up with my decision making process 🚲🙌 #newbikeday #cycling #superX #ridecannondale #lovestarraceclub #baaw #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New bike day!!! Glorious sunrise ride this morning. Thanks to @ponylou and the rest of my Pony Shop peeps for putting up with my decision making process 🚲🙌 #newbikeday #cycling #superX #ridecannondale #lovestarraceclub #baaw #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000053.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
